@@ -1,4 +1,4 @@
-Date: Thu, 10 Dec 2015 18:48:03 +0000
+Date: Mon,  8 Feb 2016 10:43:43 +0000
 Mime-Version: 1.0 (Produced by PhpWiki 1.5.5)
 Content-Type: application/x-phpwiki;
   pagename=Help%2FPluginManagerPlugin;
@@ -56,7 +56,6 @@ not provided with ~PhpWiki or PHP, such as
 * [[ftp://ftp.dante.de/tex-archive/support/latex2html | LaTeX2HTML]] for the [[Help:TexToPngPlugin|TexToPng]] plugin and [[Help:TeX2pngPlugin|TeX2png]] plugin,
 * [[http://graphviz.org/ | graphviz]] for the [[Help:GraphVizPlugin|GraphViz]] plugin and [[Help:VisualWikiPlugin|VisualWiki]] plugin,
 * [[http://ploticus.sourceforge.net/ | ploticus]] for the [[Help:PloticusPlugin|Ploticus]] plugin,
-* [[http://phpweather.sf.net | phpweather]] for the [[Help:PhpWeatherPlugin|PhpWeather]] plugin,
 * USE_DB_SESSION = true (default for the peardb, adodb or dba backends) for the [[Help:WhoIsOnlinePlugin|WhoIsOnline]] plugin,
 * --with-xml support (with expat or libxml2) for the [[Help:RssFeedPlugin|RssFeed]] plugin (~ProjectSummary, ~RecentReleases) and ~HtmlParser support (~ImportHtml, ~HtmlAreaEditing),
 * PHP Mail functionality (php.ini: SMTP + sendmail_from on Windows or sendmail_path) for email PageChangeNotifications and ModeratedPage's,
